GNOME Bugzilla – Bug 788963
manager: fix compile warning
Last modified: 2017-10-13 20:43:37 UTC
commit 7e8243eecd0233f7ab92519207f2520794439b11 introduced a compiler warning if gdm is built with --enable-wayland and --disable-user-display-server This commit fixes that.
Created attachment 361559 [details] [review] manager: fix compile warning
Attachment 361559 [details] pushed as 13e71c2 - manager: fix compile warning