manager: fix compile warning

commit 7e8243eecd0233f7ab92519207f2520794439b11 introduced a
compiler warning if gdm is built with --enable-wayland and
--disable-user-display-server

This commit fixes that.

https://bugzilla.gnome.org/show_bug.cgi?id=788963